docs: swagger command to update todo list doc
